feat: update for elizaOS v1 registry compliance
- Add agentConfig to package.json with plugin parameters
- Add images/logo.jpg and images/banner.jpg for branding
- Refactor src/ structure: types.ts, environment.ts, actions/
- Add zod validation for environment configuration
- Use generic types to avoid elizaOS version conflicts
- Bump version to 0.1.1
- Update peerDependencies to @elizaos/core

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@proofgate/eliza-plugin",
-  "version": "0.1.0",
-  "description": "ProofGate plugin for ai16z Eliza framework — validate AI agent transactions against security guardrails before execution",
+  "version": "0.1.1",
+  "description": "ProofGate plugin for elizaOS — validate AI agent transactions against security guardrails before execution",
   "publishConfig": {
     "access": "public"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "images"
   ],
   "scripts": {
     "build": "tsc",
@@ -17,6 +18,7 @@
   },
   "keywords": [
     "eliza",
+    "elizaos",
     "ai16z",
     "ai-agent",
     "blockchain",
@@ -25,7 +27,8 @@
     "guardrails",
     "proofgate",
     "defi",
-    "web3"
+    "web3",
+    "crypto"
   ],
   "author": "0xCR6 <cristian@proofgate.xyz>",
   "license": "MIT",
@@ -33,18 +36,36 @@
     "type": "git",
     "url": "https://github.com/ProofGate/proofgate-eliza-plugin.git"
   },
-  "homepage": "https://www.proofgate.xyz",
+  "homepage": "https://proofgate.xyz",
   "bugs": {
     "url": "https://github.com/ProofGate/proofgate-eliza-plugin/issues"
   },
+  "agentConfig": {
+    "pluginType": "elizaos:plugin:1.0.0",
+    "pluginParameters": {
+      "PROOFGATE_API_KEY": {
+        "type": "string",
+        "description": "ProofGate API key for authenticated validations (get from proofgate.xyz)"
+      },
+      "PROOFGATE_GUARDRAIL_ID": {
+        "type": "string",
+        "description": "Default guardrail ID for transaction validation"
+      },
+      "PROOFGATE_AUTO_BLOCK": {
+        "type": "boolean",
+        "description": "Automatically block unsafe transactions (default: true)"
+      }
+    }
+  },
   "peerDependencies": {
-    "@ai16z/eliza": "^0.1.0"
+    "@elizaos/core": "^1.0.0"
   },
   "dependencies": {
-    "viem": "^2.0.0"
+    "viem": "^2.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0"
+    "@types/node": "^20.19.31",
+    "typescript": "^5.9.3"
   }
 }
